<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/cart" />
    <item
        android:id="@+id/nav_orders"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/orders" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@android:drawable/sym_action_chat"
        android:title="Chat" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>